src/style.scss
body {
  margin-top: -5px;
}
.icon-bni {
  color: var(--app-theme-bg-color) !important;
  fill: var(--app-theme-bg-color) !important;
}

.bni-bg {
  background: var(--app-theme-bg-color) !important;
}

.bni-text {
  color: var(--app-theme-color) !important;
}

.bni-border {
  border-color: var(--app-theme-bg-color) !important;
  border: solid var(--app-theme-bg-color) !important;

  &-all {
    border-style: solid;
    &-1 {
      border-width: 1px !important;
    }
    &-2 {
      border-width: 2px !important;
    }
    &-3 {
      border-width: 3px !important;
    }
  }
  &-top {
    border-top-style: solid;
    &-1 {
      border-top-width: 1px;
    }
    &-2 {
      border-top-width: 2px;
    }
    &-3 {
      border-top-width: 3px;
    }
  }
  &-left {
    border-left-style: solid;
    &-1 {
      border-left-width: 1px;
    }
    &-2 {
      border-left-width: 2px;
    }
    &-3 {
      border-left-width: 3px;
    }
  }
  &-bottom {
    border-bottom-style: solid;
    &-1 {
      border-bottom-width: 1px;
    }
    &-2 {
      border-bottom-width: 2px;
    }
    &-3 {
      border-bottom-width: 3px;
    }
  }
  &-right {
    border-right-style: solid;
    &-1 {
      border-right-width: 1px;
    }
    &-2 {
      border-right-width: 2px;
    }
    &-3 {
      border-right-width: 3px;
    }
  }
}

.btn-bni {
  background: var(--app-theme-bg-color);
  color: var(--app-theme-color);
  border: solid 1px var(--app-theme-bg-color);
  white-space: nowrap;
  text-overflow: ellipsis;

  &.btn:hover {
    background: var(--app-theme-bg-color);
    color: var(--app-theme-color);
    opacity: 0.9 !important;
    border: inherit !important;
  }

  &.dark {
    background: $black-color;
    color: var(--app-theme-bg-color);
  }

  &.active {
    background: $black-five;
    border: solid 1px $black-five;
    color: var(--app-theme-bg-color);
  }
  &:disabled {
    opacity: 0.65;
    cursor: not-allowed;
    background-color: var(--app-theme-bg-color);
  }
  &.sm {
    padding: 8px;
    font-weight: 450;
    border-radius: 5px;
  }

  &.btn-sm {
    &:hover,
    &:active {
      background: var(--app-theme-bg-color);
      border: solid 1px var(--app-theme-bg-color);
      color: var(--app-theme-color);
    }
  }
}

.x-scroll {
  overflow-x: auto;
}

.y-scroll {
  overflow-y: auto;
}

.max-h-12 {
  max-height: 12rem;
}

.infiniteAnimation {
  animation-duration: 1s;
  animation-delay: 1s;
  animation-iteration-count: 3;
}

//bni temp end

.hr {
  margin-bottom: 0;
}

a {
  color: #337ab7;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #000000;
}

.brand {
  height: 40px;

  &.global {
    max-width: 200px;
  }

  @include view-mobile {
    // margin-top: 50px;
  }
}

.application-wrapper {
  display: grid;
  grid-template-columns: 100%;
  margin: 4px auto 0 auto;
  opacity: 0.9;

  .application-content {
    display: flex;

    .fixed-content {
      position: fixed;
      z-index: 1;
      width: 100%;
    }

    &.sideMenuLeft {
      flex-direction: row;
    }

    &.sideMenuRight {
      flex-direction: row-reverse;
    }

    &.topMenu {
      .fixed-content {
        height: auto;
        width: 100%;
      }
    }

    &.sideMenuLeft,
    &.sideMenuRight {
      .fixed-content {
        height: 100vh;
        width: 16.67%;
      }
    }

    .wrapper {
      position: relative;
      overflow: hidden;
      display: block;
      @media print {
        width: 100%;
      }
      &.topMenu {
        margin-top: 100px;
        min-height: calc(100vh - 99px);
        @include view-tablet-potrait {
          margin-top: 50px;
        }
        @media (max-width: 768px) {
          margin-top: 50px;
          min-height: calc(100vh - 95px);
        }
      }

      &.sideMenuLeft,
      &.sideMenuRight {
        margin-top: 50px;
        min-height: calc(100vh - 49px);
      }
    }

    .mobile-menu {
      display: none;
    }

    @include view-mobile {
      .mobile-menu {
        display: block;
        background: $black-color;
        width: 100%;
        z-index: 9999;

        .header-menu {
          list-style: none;
          padding-left: 5px;
          min-height: calc(100vh - 100px);

          li {
            padding: 5px 0;

            a {
              text-decoration: none;
            }
          }
        }
      }

      .vertical-header {
        display: none;
      }
    }

    @include view-tablet-potrait {
      .mobile-menu {
        display: none;
      }
    }

    @include view-tablet-landscape {
      .mobile-menu {
        display: none;
      }
    }
  }

  @include view-mobile {
    .application-content {
      flex-direction: column !important;

      .fixed-content {
        width: 100%;
        height: auto;
      }
    }
  }

  @include view-desktop-large {
    &.default {
      grid-template-columns: 100%;
    }

    &.classic {
      grid-template-columns: auto 70% auto;

      .sideMenuLeft {
        .fixed-content {
          width: 11.67%;
        }
      }

      .sideMenuRight {
        .fixed-content {
          width: 11.67%;
        }
      }
    }
  }

  @include view-desktop-x-large {
    &.default {
      grid-template-columns: 100%;
    }

    &.classic {
      grid-template-columns: auto 70% auto;
    }
  }

  // mobile
  @media (max-width: 768px) {
    margin-top: 50px;
  }

  //landscape
  @media (min-width: 992px) and (max-width: 1199px) {
    margin-top: 4px;
  }

  // portrait
  @media (min-width: 768px) and (max-width: 991px) {
    margin-top: 50px;
  }

  //print
  @media print {
    margin-top: 0;
  }
}
/* ... */

